<resources>
    <string name="app_name">TakeMine</string>
    <string name="dont_have_account">Nie masz konta?</string>
    <string name="register">Zarejestruj się</string>
    <string name="login">Zaloguj się</string>
    <string name="email_already_taken">Ten adres e-mail jest już zajęty!</string>
    <string name="connection_error">Błąd połączenia!</string>
    <string name="incorrect_email">Nieprawidłowa struktura adresu e-mail!</string>
    <string name="invalid_password_blank">Hasło jest puste!</string>
    <string name="invalid_password_different">Hasła są różne!</string>
    <string name="invalid_password_too_short">Hasło powinno mieć co najmniej 8 znaków</string>
    <string name="provide_correct_email_and_password">Podaj prawidłowy adres e-mail oraz hasło</string>
    <string name="obtain_title">Odbieraj</string>
    <string name="obtain_description">Odbieraj wciąż przydatne i ładne przedmioty, których inni już nie potrzebują. Może nowa kanapa od sąsiadów?</string>
    <string name="give_away_title">Oddawaj</string>
    <string name="give_away_description">Oddaj rzeczy, których już nie używasz zamiast jest wyrzucać. Stare krzesło w piwnicy może zaoszczędzić pobliskiemu studentowi bólu pleców!</string>
    <string name="take_action_title">Zrób coś!</string>
    <string name="take_action_description">Działaj małymi krokami przeciwko powszechnemu marnotrastwu i promuj społeczny recykling</string>
    <string name="next">DALEJ</string>
    <string name="get_started">ZACZYNAJMY!</string>
    <string name="choose_city">Wybierz miasto</string>
    <string name="skip">POMIŃ</string>
    <string name="no_products_text">Nie znaleziono żadnych przedmiotów</string>
    <string name="nav_header_title">TakeMine</string>
    <string name="nav_header_subtitle">Podtytuł</string>
    <string name="create_account">Utwórz konto</string>
    <string name="email_hint">Adres e-mail</string>
    <string name="password_hint">Hasło</string>
    <string name="confirm_password_hint">Potwierdź hasło</string>
    <string name="register_button">ZAREJESTRUJ SIĘ</string>
    <string name="menu_home">Strona główna</string>
    <string name="menu_history">Twoja historia</string>
    <string name="menu_about">Wyloguj się</string>
    <string name="no_photos_text">Brak zdjęcia</string>
    <string name="no_location_provided">Nie podano lokalizacji!</string>
    <string name="no_hours_provided">Nie podano godzin dostępności</string>
    <string name="no_day_chosen">Nie wybrano żadnego dnia!</string>
    <string name="successfully_added_location">Pomyślnie dodano lokalizację!</string>
    <string name="successfully_added_product">Pomyślnie dodano nowy przedmiot!</string>
    <string name="already_bought">Przedmiot już został kupiony!</string>
</resources>
